2014-06-13  horneds

	* Version 4.5.3
	* Add support for django fields: FilePathField, GenericIPAddressField, PositiveSmallIntegerField

2014-06-07  horneds

	* Version 4.5.2
	* Fix sqlalchemy many to many relationships (c) Antoine Bertin

2014-05-23  horneds

	* Version 4.5.1
	* More information from errors

2014-05-19  horneds

	* Version 4.4.0
	* Added mixer.G.get_percent and mixer.G.get_percent_decimal

2014-05-16  horneds

	* Version 4.3.2
	* Add support for Django o2o field.

2014-05-14  horneds

	* Version 4.3.1
	* Fix get_positive_decimal

2014-05-13  horneds

	* Version 4.3.0
	* Improve lorem generation
	* Added slug faker

2014-05-07  horneds

	* Version 4.0.7
	* Minor fixes

2014-05-05  horneds

	* Version 4.0.5
	* Respect max_length for django.TextField

2014-04-30  horneds

	* Version 4.0.4
	* Add beta support for Peewee and Pony ORM

2014-04-16  horneds

	* Version 3.0.0
	* Django: ManyToManyField is not generated by default
	* Change mixer.register syntax (See README)
	* Instead postprocess Mixer now supports middleware decorators (See README)

2014-02-10  horneds

	* Version 2.3.0
	* Added beta support for guards
	    # Works like "get or create user with username='root'"
	    root = mixer.guard(username='root').blend('auth.user')

2014-02-09  horneds

	* Version 2.2.0
	* Added 'silence' param to mixer initialization
	    with mixer.ctx(silence=True):
	        # No errors will be raised
		user = mixer.blend('auth.User', username='mike')
		null = mixer.blend('auth.User', username='mike')
		

2014-01-03  horneds

	* Version 2.1.0
	* Updated support for django content_types

2013-12-31  horneds

	* Version 2.0.0
	* 'mixer.random', 'mixer.fake', 'mixer.select', 'mixer.mix',
	'mixer.f', 'mixer.g' -- are depricated use them in UPPERCASE ('mixer.RANDOM' and etc)
	* Added 'mixer.SKIP' attribute for skipping a value generation

2013-12-27  horneds

	* Support context (redefine mixer params as context)
	* Version 1.6.0

2013-11-25  horneds

	* Version 1.5.1