@@ -1,3 +1,7 @@
+2014-06-17  horneds
+
+	* Provided guard and select for sqlalchemy. Added mixer.reload.
+
 2014-06-13  horneds
 
 	* Version 4.5.3
